--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,12 +3,13 @@ $dark-background: #3E3F40;
 $orange-background: #EBB85D;
 $light-text: #fff;
 $dark-text: #101010;
-$full-width: 100vw;
+$full-width: 100%;
 
-@mixin dark-element ($text) {
+@mixin dark-element ($text,$heig) {
     background: $dark-background;
     text-align: ($text);
     color: $light-text;
+    height:$heig;
 }
 
 @mixin orange-element ($text,$heig){
@@ -29,4 +30,15 @@ header {
     display: grid;
     width: $full-width;
     @include orange-element(center,15vh);
+}
+
+main {
+    width: $full-width;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;   
+}
+
+footer {
+    width: $full-width;
+    @include dark-element(center,10vh);
 }
