--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -106,6 +106,9 @@ footer {
         grid-template-columns: 1fr 3fr;
         grid-template-rows: auto;
     }
+    #secondary-content {
+        grid-column: 1/3;
+    }
 }
 
 @media (min-width:0px) and (max-width:668px) {
