--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,3 @@
-/*atributos reusables*/
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,13 +6,15 @@
 
 header {
   width: 100%;
-  background: #EBB85D;
+  background: rgba(235, 184, 93, 0.99);
   text-align: center;
   height: 15vh;
   color: #fff;
   display: flex;
   justify-content: center;
   align-items: center; }
+  header h1 {
+    font-size: 3rem; }
 
 main {
   width: 100%;
@@ -21,15 +22,16 @@ main {
   padding: 1rem; }
   main h1,
   main h4 {
-    font-weight: bold; }
-  main ol {
-    padding-left: 2vw; }
+    font-weight: bolder; }
+  main table {
+    width: 100%;
+    text-align: left; }
 
 #side-menu ul {
   line-height: 6vh;
   list-style: none; }
   #side-menu ul li {
-    background: #3E3F40;
+    background: rgba(62, 63, 64, 0.99);
     text-align: left;
     color: #fff;
     height: auto;
@@ -37,7 +39,7 @@ main {
     padding: 0 2vw;
     cursor: pointer; }
   #side-menu ul li:last-child {
-    background: #EBB85D;
+    background: rgba(235, 184, 93, 0.99);
     text-align: left;
     height: auto;
     color: #fff; }
@@ -51,7 +53,7 @@ main {
     margin-bottom: 2vh; }
 
 #secondary-content {
-  background: #3E3F40;
+  background: rgba(62, 63, 64, 0.99);
   text-align: center;
   color: #fff;
   height: auto;
@@ -62,7 +64,7 @@ main {
 
 footer {
   width: 100%;
-  background: #3E3F40;
+  background: rgba(62, 63, 64, 0.99);
   text-align: center;
   color: #fff;
   height: 10vh;
